Add comprehensive Supabase keep-alive system
- Add API endpoint at /api/keep-alive for database connection maintenance
- Add Node.js script for continuous keep-alive with configurable intervals
- Add cron job script for automated production keep-alive
- Add npm scripts for easy keep-alive execution
- Add comprehensive documentation and troubleshooting guide
- Support for both development and production environments

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "keep-alive": "node scripts/keep-alive.js",
+    "keep-alive:prod": "node scripts/keep-alive.js --url https://pathniti.vercel.app"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
