Fix: Resolve Vercel deployment issues and enhance security
- Fixed dynamic server usage error in colleges/nearby API route
- Created secure environment setup guide with placeholder values only
- Enhanced .gitignore to prevent future API key exposure
- Added security best practices documentation

Note: Dynamic server usage warning is expected for API routes with query parameters

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,15 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.production
+.env.development
+
+# Security: Never commit files with API keys or secrets
+*_SETUP.md
+*_CONFIG.md
+*_KEYS.md
+*_SECRETS.md
 
 # vercel
 .vercel
