--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "dotenv": "^17.2.2",
     "isomorphic-dompurify": "^2.28.0",
     "lucide-react": "^0.544.0",
-    "next": "^14.2.32",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "^15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
@@ -70,8 +70,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.5.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.18",
     "jest": "^29.7.0",
@@ -80,11 +80,11 @@
     "typescript": "^5"
   },
   "overrides": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "resolutions": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
