--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.18",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^3.4.17",
