--- a/package.json
+++ b/package.json
@@ -84,12 +84,16 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "isomorphic-dompurify": "^2.28.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.7.3",
     "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
